--- a/binary-parser.cabal
+++ b/binary-parser.cabal
@@ -35,6 +35,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , text
   default-language: Haskell2010
 
 executable binary-parser-exe
@@ -49,6 +50,7 @@ executable binary-parser-exe
   build-depends:
       base >=4.7 && <5
     , binary-parser
+    , text
   default-language: Haskell2010
 
 test-suite binary-parser-test
@@ -64,4 +66,5 @@ test-suite binary-parser-test
   build-depends:
       base >=4.7 && <5
     , binary-parser
+    , text
   default-language: Haskell2010
