feat: add simple lexer

--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
-name:                binary-parser
+name:                arithmetic-lexical-analyzer
 version:             0.1.0.0
-github:              "githubuser/binary-parser"
+github:              "StanleyStanMarsh/arithmetic-lexical-analyzer"
 license:             BSD-3-Clause
 author:              "Astafiev Igor"
 maintainer:          "example@example.com"
-copyright:           "2024 Astafiev Igor"
+copyright:           "2025 Astafiev Igor"
 
 extra-source-files:
 - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/binary-parser#readme>
+description:         Please see the README on GitHub at <https://github.com/StanleyStanMarsh/arithmetic-lexical-analyzer#readme>
 
 dependencies:
 - base >= 4.7 && < 5
