--- a/binary-parser.cabal
+++ b/binary-parser.cabal
@@ -25,7 +25,7 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      Parser
   other-modules:
       Paths_binary_parser
   autogen-modules:
